before/overlays/prod/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prod-nginx
  labels:
    app: prod-nginx
spec:
  replicas: 3
  metadata:
    labels:
      app: prod-nginx
  template:
    metadata:
      labels:
        app: prod-nginx
    spec:
      containers:
      - imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
        name: nginx
        image: nginx:6b654da03c0e
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
      imagePullSecrets:
      - name: gitlab
