before/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-nginx
spec:
  selector:
    app: prod-nginx
  ports:
  - name: http-app
    port: 80
